--- a/webform.html
+++ b/webform.html
@@ -8,12 +8,12 @@
 <body>
 <h1>An HTML Form</h1>
 
-<form action="" method="get">
+<form action=" " method="get">
   <div style="width: 25em;">
     <label for="textField">A Text input field</label>
-    <input type="text" name="textField" id="textField" value=""/>
+    <input type="text" name="textField" id="textField" value=" "/>
     <label for="passwordField">A Password field</label>
-	<input type="password" name="passwordField" id="passwordField" value=""/>
+	<input type="password" name="passwordField" id="passwordField" value=" "/>
 	<label for="checkboxField">A Checkbox field</label>
 	<input type="checkbox" name="checkboxField" id="checkboxField" value="yes"/>
 	<label for="radioButtonField1">A radio button field</label>
@@ -29,8 +29,7 @@
 	<label for="hiddenField">A hidden field</label>
 	<input type="hidden" name="hiddenField" id="hiddenField" value=""/>
 	<label for="imageField">An image field</label>
-	<input type="image" name="imageField" id="imageField" value=""/>
-	  src="asterisk.gif" width="23" height="23"/>
+	<input type="image" name="imageField" id="imageField" value="" src="asterisk.gif" width="23" height="23"/>
 	<label for="pushButton">A push button</label>
 	<input type="push" name="pushButton" id="pushButton" value="click me"/>
 	<label for="pullDownMenu">A pull down menu</label>
